--- a/style.css
+++ b/style.css
@@ -1,111 +1,70 @@
-/*
- * Globals
- */
 
-/* Links */
-a,
-a:focus,
-a:hover {
-  color: #fff;
-}
-
-/* Custom default button */
-.btn-secondary,
-.btn-secondary:hover,
-.btn-secondary:focus {
-  color: #333;
-  text-shadow: none; /* Prevent inheritance from `body` */
-  background-color: #fff;
-  border: .05rem solid #fff;
-}
-
-
-/*
- * Base structure
- */
 
 html,
 body {
   height: 100%;
-  background-color: #333;
+  background-color: #f39406f3;
   background-image: url("img/slider4.jpg") 0.5;
 }
 
 body {
-  display: -ms-flexbox;
-  display: flex;
   color: #fff;
   text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
-  box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
+
+  /* box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5); */
 }
 
-.cover-container {
-  max-width: 42em;
+/* logo header css */
+
+.logo-box {
+  /* width: 100vw; */
+  height: 75px;
+  background-color: white;
+  /* background-image: url("/img/slider2.jpg"); */
+  padding: 5px 10px 5px 10px;
+  display: flex;
+  flex-direction:row;
+  justify-content: space-between;
 }
 
-
-/*
- * Header
- */
-.masthead {
-  margin-bottom: 2rem;
+.logo-box .halal-logo img {
+  height: 70px;
+  width: 70px;
 }
 
-.masthead-brand {
-  margin-bottom: 0;
-}
+@media only screen and (max-width: 425px) {
 
-.nav-masthead .nav-link {
-  padding: .25rem 0;
-  font-weight: 700;
-  color: rgba(255, 255, 255, .5);
-  background-color: transparent;
-  border-bottom: .25rem solid transparent;
-}
-
-.nav-masthead .nav-link:hover,
-.nav-masthead .nav-link:focus {
-  border-bottom-color: rgba(255, 255, 255, .25);
-}
-
-.nav-masthead .nav-link + .nav-link {
-  margin-left: 1rem;
-}
-
-.nav-masthead .active {
-  color: #fff;
-  border-bottom-color: #fff;
-}
-
-@media (min-width: 48em) {
-  .masthead-brand {
-    float: left;
+  .logo-box {
+    height: 10vh;
   }
-  .nav-masthead {
-    float: right;
+  .logo-box .chang-kee-logo img {
+    width: 200px;
+
+  }
+  .logo-box .halal-logo img {
+    height: 40px;
+    width: 40px;
   }
 }
 
 
-/*
- * Cover
- */
-.cover {
-  padding: 0 1.5rem;
-}
-.cover .btn-lg {
-  padding: .75rem 1.25rem;
-  font-weight: 700;
+/* carousel css*/
+
+#carouselExampleControls {
+  padding: 25px;
 }
 
+/* footer css */
 
-/*
- * Footer
- */
-.mastfoot {
-  color: rgba(255, 255, 255, .5);
+.main-page-footer {
+  /* width: 100vw; */
+  height: 60vh;
+  background-color: rgb(77, 72, 72);
+  padding-top: 10px;
 }
 
-main{
-    padding: 10%;
+/* footer */
+
+.logo-certificate {
+  padding: 15px;
 }
