--- a/css/main.css
+++ b/css/main.css
@@ -1,17 +1,15 @@
-
-
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box
 }
 
-body{
+body {
     font-family: "Poppins", sans-serif;
-  font-weight: 400;
-  font-style: normal;
+    font-weight: 400;
+    font-style: normal;
 }
-  
+
 a {
     font-family: "Poppins", sans-serif;
     font-size: 14px;
@@ -25,14 +23,19 @@ a {
 }
 
 a:focus {
-    outline: none!important
+    outline: none !important
 }
 
 a:hover {
     text-decoration: none
 }
 
-h1,h2,h3,h4,h5,h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
     margin: 0
 }
 
@@ -44,7 +47,8 @@ p {
     margin: 0
 }
 
-ul,li {
+ul,
+li {
     margin: 0;
     list-style-type: none
 }
@@ -59,8 +63,9 @@ textarea {
     border: none
 }
 
-textarea:focus,input:focus {
-    border-color: transparent!important
+textarea:focus,
+input:focus {
+    border-color: transparent !important
 }
 
 input:focus::-webkit-input-placeholder {
@@ -128,7 +133,7 @@ textarea:-ms-input-placeholder {
 }
 
 button {
-    outline: none!important;
+    outline: none !important;
     border: none;
     background: 0 0
 }
@@ -138,7 +143,7 @@ button:hover {
 }
 
 iframe {
-    border: none!important
+    border: none !important
 }
 
 .txt1 {
@@ -183,21 +188,26 @@ iframe {
     justify-content: center;
     align-items: center;
     padding: 15px;
-    background: #f2f2f2
+    background: transparent;
+
 }
 
 .wrap-contact100 {
     width: 1120px;
-    background: #fff;
     overflow: hidden;
-    display: -webkit-box;
-    display: -webkit-flex;
+
     display: -moz-box;
     display: -ms-flexbox;
     display: flex;
     flex-wrap: wrap;
     align-items: stretch;
-    flex-direction: row-reverse
+    flex-direction: row-reverse;
+
+    background: rgba(255, 255, 255, 0.75);
+    border-radius: 28px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(8.2px);
+    -webkit-backdrop-filter: blur(8.2px);
 }
 
 .contact100-more {
@@ -219,7 +229,9 @@ iframe {
     height: 100%;
     top: 0;
     left: 0;
-    background: rgba(0,0,0,.8)
+    background: rgba(0, 0, 0, .8);
+
+
 }
 
 .contact100-form {
@@ -250,7 +262,8 @@ iframe {
     border: 1px solid #e6e6e6
 }
 
-.rs1-wrap-input100,.rs2-wrap-input100 {
+.rs1-wrap-input100,
+.rs2-wrap-input100 {
     width: 50%
 }
 
@@ -375,7 +388,7 @@ textarea.input100 {
 
 @media(max-width: 992px) {
     .contact100-form {
-        width:60%;
+        width: 60%;
         padding: 56px 30px 63px
     }
 
@@ -386,7 +399,7 @@ textarea.input100 {
 
 @media(max-width: 768px) {
     .contact100-form {
-        width:100%
+        width: 100%
     }
 
     .contact100-more {
@@ -396,10 +409,11 @@ textarea.input100 {
 
 @media(max-width: 576px) {
     .contact100-form {
-        padding:56px 15px 63px
+        padding: 56px 15px 63px
     }
 
-    .rs1-wrap-input100,.rs2-wrap-input100 {
+    .rs1-wrap-input100,
+    .rs2-wrap-input100 {
         width: 100%
     }
 
@@ -465,7 +479,7 @@ textarea.input100 {
 
 @media(max-width: 992px) {
     .alert-validate::before {
-        visibility:visible;
+        visibility: visible;
         opacity: 1
     }
 }
