--- a/style.css
+++ b/style.css
@@ -4,18 +4,29 @@ html,
 body {
   height: 100%;
   background-color: #f39406f3;
-  background-image: url("img/slider4.jpg") 0.5;
+  
 }
 
 body{
   color: #fff;
-  
-  text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
-  box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
-}
+/*   
+   text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
+  box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5); */
+} 
 
 .cover-container {
   max-width: 42em;
+}
+
+.logo-box {
+  /* width: 100vw; */
+  height: 75px;
+  background-color: lightgoldenrodyellow;
+  /* background-image: url("/img/slider2.jpg"); */
+  padding: 5px 10px 5px 10px;
+  display: flex;
+  flex-direction:row;
+  justify-content: space-between;
 }
 
 
