--- a/betterPuff.css
+++ b/betterPuff.css
@@ -1,4 +1,4 @@
-.container img{
+/* .container img{
     height: 70vh;
     width: 100%;
 }
@@ -6,30 +6,36 @@
 .currypuff img{
     height: 30vh;
     width: 100%;
-}
+} */
 .currypuff {
     display: flex;
     justify-content: space-between;
     padding: 0% 5% 0% 0%;
   
 }
-h1{
+/* h1{
     font-family: 'Arial', sans-serif;
     font-size: 36px;
     color: #333;
-    /* text-align: center; */
     text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
     background: white;
     border-bottom: 2px solid #feb47b;
     padding-bottom: 10px;
     margin-bottom: 20px;
-}
+} */
+
 h2{
     font-family: 'Arial', sans-serif;
     font-size: 36px;
     color: #333;
     text-align: center;
     text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
-    padding-bottom: 10px;
-    margin-bottom:20px;
 }
+
+.landingPage-content{
+    padding: 30px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
