--- a/spices.css
+++ b/spices.css
@@ -1,4 +1,4 @@
-
+/* 
 .container img {
 
     width: 100%; 
@@ -39,4 +39,4 @@
     flex-direction: row;
     justify-content: space-between;
     padding: 10px 10px;
-}
+} */
