--- a/css/main.css
+++ b/css/main.css
@@ -12,7 +12,7 @@ body {
 
 a {
     font-family: "Poppins", sans-serif;
-    font-size: 14px;
+    font-size: 15px;
     line-height: 1.7;
     color: #666;
     margin: 0;
@@ -38,20 +38,16 @@ h5,
 h6 {
     margin: 0
 }
-
+/* 
 p {
     font-family: "Poppins", sans-serif;
     font-size: 14px;
     line-height: 1.7;
     color: #666;
     margin: 0
-}
+} */
 
-ul,
-li {
-    margin: 0;
-    list-style-type: none
-}
+
 
 input {
     outline: none;
