--- a/style.css
+++ b/style.css
@@ -1,18 +1,15 @@
-
-
 html,
 body {
   height: 100%;
   background-color: #f39406f3;
-  
 }
 
-body{
+body {
   color: #fff;
-/*   
+  /*   
    text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
   box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5); */
-} 
+}
 
 .cover-container {
   max-width: 42em;
@@ -25,10 +22,9 @@ body{
   /* background-image: url("/img/slider2.jpg"); */
   padding: 5px 10px 5px 10px;
   display: flex;
-  flex-direction:row;
+  flex-direction: row;
   justify-content: space-between;
 }
-
 
 /*
  * Header
@@ -42,16 +38,16 @@ body{
 }
 
 .nav-masthead .nav-link {
-  padding: .25rem 0;
+  padding: 0.25rem 0;
   font-weight: 700;
-  color: rgba(255, 255, 255, .5);
+  color: rgba(255, 255, 255, 0.5);
   background-color: transparent;
-  border-bottom: .25rem solid transparent;
+  border-bottom: 0.25rem solid transparent;
 }
 
 .nav-masthead .nav-link:hover,
 .nav-masthead .nav-link:focus {
-  border-bottom-color: rgba(255, 255, 255, .25);
+  border-bottom-color: rgba(255, 255, 255, 0.25);
 }
 
 .nav-masthead .nav-link + .nav-link {
@@ -64,13 +60,11 @@ body{
 }
 
 @media only screen and (max-width: 425px) {
-
   .logo-box {
     height: 10vh;
   }
   .logo-box .chang-kee-logo img {
     width: 200px;
-
   }
   .logo-box .halal-logo img {
     height: 40px;
@@ -78,21 +72,19 @@ body{
   }
 }
 
-
 /* carousel css*/
 
 #carouselExampleControls {
   padding: 25px;
 }
 
-.landingPage-content{
+.landingPage-content {
   padding: 30px;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-between;
 }
-
 
 .card-categries {
   padding: 20px 20px 20px 20px;
@@ -107,7 +99,7 @@ body{
   background-color: none;
   border: none;
   width: 31%;
-  border-radius: none ;
+  border-radius: none;
   transition: all 0.5s cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -119,6 +111,47 @@ body{
 .card-img, .card-img-bottom, .card-img-top {
   height: 20vh; 
 }
+
+/* .card-text {
+  white-space: nowrap;
+  overflow: hidden;
+ text-overflow: ellipsis;
+} */
+
+.card-content {
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+ 
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+/* spices css */
+.spice-text p {
+  padding: 15px 5px 15px 5px;
+  color: rgb(0, 0, 0);
+  font-size: medium;
+}
+
+.active {
+  color: white;
+  font-weight: bold;
+}
+
+a:visited {
+  color: #fff700;
+}
+
+.franchise-dialog h4{
+  color:red;
+}
+
+.franchise-content {
+  padding: 20px;
+  border: 1px solid black;
+  border-radius: 5px;
+}
+
 
 /* spices css */
 .spice-text p {
