--- a/style.css
+++ b/style.css
@@ -175,4 +175,40 @@ body {
 
 .card-body {
   flex: 1;
+  display: flex;
+  flex-direction: column;
+}
+
+.card-text {
+  flex: 1;
+}
+.mobile{
+  display: none;
+}
+
+
+@media (max-width: 991px) {
+  .col-sm-6 {
+    width: 200px;
+    height: 300px;
+    display: flex;
+    flex-direction: column;
+  }
+  .card-text {
+    display: none;
+  }
+  .mobile {
+    display: block;
+  }
+  .non-mobile {
+    display: none;
+  }
+  .card-body {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+  .card-body > *:not(.card-title):not(.btn) {
+    display: none;
+  }
 }
